<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="G_MachineControl" Id="{81b36d32-4934-4a29-831b-336ae7ff3ebd}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	bManualMode 			: BOOL;
	bAutoMode 				: BOOL;
	bWinchEnable 			: BOOL;
	bCylEnable 				: BOOL;
	fWinchControlInput 		: LREAL;
	fWinchTime				: LREAL;
	fCylControlInput 		: LREAL;
	fCylTime				: LREAL;
	fVelRefWinch 			: LREAL;
	fPosRefWinch 			: LREAL;
	fControlSignWinch		: LREAL;
	fVelRefCyl 				: LREAL;
	fPosRefCyl 				: LREAL;
	fControlSignCyl			: LREAL;
	fPositionErrorWinch_mm 	: LREAL;
	fPositionErrorCylinder_mm : LREAL;
	fSampleTime				: LREAL := 0.002;
	fTimeSinceStart			: LREAL := 0.0;
	fStrokeActuatorMain 	AT %I* : LREAL;
	fStrokeActuatorKnuckle 	AT %I* : LREAL;
	fSlewMotorAngle			AT %I* : LREAL;
	fWinchMotorAngle		AT %I* : LREAL;	
<<<<<<< HEAD:TwinCAT/SFICraneNewSetup/SFICrane/MACHINE CONTROL/G_Work.TcGVL
	bEMG_Restart 			AT %Q* : BOOL;
=======
	fWinchAngle				: LREAL;
	
	fCraneForwardY 			: LREAL;
	fTheta3Forward			: LREAL;
	fTheta4Forward			: LREAL;
	fWireLengthOnCrane		: LREAL;
	fEncoderValue0Turns		: LREAL;
	fEncoderValue5Turns		: LREAL;
	fEncoderValueLayer2		: LREAL;
	fEncoderValuePayload0	: LREAL;
	fPayloadHeightIni		: LREAL := 1.0;
	fWinchPitchRadiusLayer1 : LREAL := 0.0716;
	fWinchPitchRadiusLayer2 : LREAL := 0.0731;
	fWinchGearRatio 		: LREAL := 32;
	fWinchMotorAngleRef			: LREAL;
>>>>>>> edf6f2e068e7575cdf7fdcbf34452a62e6a1fd5d:TwinCAT/SFICraneNewSetup/SFICrane/MACHINE CONTROL/G_MachineControl.TcGVL
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>